crates/core/tests/proc/fn/on_ty.stderr
error: expected `fn`
 --> tests/proc/fn/on_ty.rs:4:1
  |
4 | struct Foo;
  | ^^^^^^
