crates/core/tests/proc/fn/on_ty.rs
use interoptopus::ffi_function;

#[ffi_function]
struct Foo;

#[allow(dead_code)]
fn main() {}
